tests/NormalTests/paczka1/fuzzy1/61246621.err
Error in line 3: LlUÄ7LQU A464 76,8
Error in line 1: zFeH S309 32,9
Error in line 4: zFeH S598 83,9
Error in line 5: zFeH A464 99,4
Error in line 10: LlUC7LQU S309 9,29
Error in line 9: OHbtCT S309 52,4
Error in line 30: zFeH S222 85,2
